--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <p>
                 Currently, I'm seeking my next exciting research and discovery opportunity. If you're looking for a bioinformatician who can navigate both the depths of the ocean and the complexities of big data, let's connect!
 
-                I am seeking my next exciting research and discovery opportunity. Interested employers, please see my CV here and reach out to <a href="mailto:mora@jovian.bio" rel="nofollow noopener noreferrer me"><i aria-hidden="true"></i><span class="label">mora at jovian.bio</span></a>
+                I am seeking my next exciting research and discovery opportunity. Interested employers, please see my CV and reach out through email to <a href="mailto:mora@jovian.bio" rel="nofollow noopener noreferrer me"><i aria-hidden="true"></i><span class="label">mora at jovian dot bio</span></a>
             </p>
 
         </section>
