--- a/cv.html
+++ b/cv.html
@@ -172,7 +172,7 @@
             <a href="cv.html">CV</a>
         </nav>
         <div class="pdf-link">
-            <a href="docs/MoraJoveGroussman_Resume.pdf" target="_blank">Link to one-page resume (PDF)</a>
+            <a href="docs/MoraJoveGroussman_Resume.pdf" target="_blank">Link to two-page resume (PDF)</a>
         </div>
         <section id="professional-summary">
             <h2>Professional Summary</h2>
