--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Mora Jove Groussman, Ph.D.</title>
+    <title>About Mora Groussman, Ph.D.</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Noto+Serif&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -146,7 +146,7 @@
     <canvas id="matrix"></canvas>
     <div class="content">
         <header>
-            <h1>Mora Jove Groussman, Ph.D.</h1>
+            <h1>Mora J. Groussman, Ph.D.</h1>
         </header>
         <nav>
             <a href="cv.html">CV</a>
@@ -156,9 +156,9 @@
         </nav>
         <section id="home">
             <div class="photo-container">
-                <img src="img/rocha_do_chambre.png" 
-                     srcset="img/rocha_do_chambre.png 1x" 
-                     alt="Mora Jove Groussman" 
+                <img src="img/larrabee_st_park.jpg" 
+                     srcset="img/larrabee_st_park.jpg 1x" 
+                     alt="Mora J Groussman" 
                      width="200" 
                      height="200">
             </div>
