--- a/links.html
+++ b/links.html
@@ -417,7 +417,7 @@
                         <div class="link-content">
                             <span class="link-title">LinkedIn</span>
                             <p class="link-description">Professional profile and network</p>
-                            <a href="https://www.linkedin.com/in/mora-jove-groussman/" class="link-url" target="_blank">linkedin.com/in/mora-jove-groussman</a>
+                            <a href="https://www.linkedin.com/in/mora-j-groussman/" class="link-url" target="_blank">linkedin.com/in/mora-j-groussman</a>
                         </div>
                     </div>
                     
