--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@
            
            <section aria-label="Profile photo and introduction">
                <div class="photo-container">
-                   <img src="https://jovian.bio/img/larrabee_st_park.jpg" 
-                        srcset="img/larrabee_st_park.png 1x" 
+                   <img src="img/larrabee_st_park.jpg" 
                         alt="Mora J. Groussman" 
                         width="200" 
                         height="200"
