--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <meta name="expertise-level" content="Principal, Staff, Lead, Senior">
    <meta name="availability" content="Open to opportunities">
    <meta name="location" content="Seattle, WA, USA | Remote | Hybrid">
+   <meta name="metadata" content="https://www.jovian.bio/docs/metadata.html">
    
    <!-- Open Graph / Social Media -->
    <meta property="og:title" content="Mora J. Groussman, Ph.D. | AI Edge Computing Architect">
