--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     "https://orcid.org/0000-0001-7874-7217",
     "https://github.com/rdgroussman",
     "https://scholar.google.com/citations?user=mm1hCMkAAAAJ",
-    "https://www.linkedin.com/in/mora-j-groussman/"
+    "https://www.linkedin.com/in/mora-j-groussman/",
+      "https://jovian.bio/docs/metadata.html"
   ],
   "alumniOf": {
     "@type": "CollegeOrUniversity",
@@ -478,6 +479,7 @@
                <li><a href="projects.html">~/projects</a></li>
                <li><a href="resources.html">~/resources</a></li>
                <li><a href="links.html">~/links</a></li>
+              <li><a href="docs/metadata.html"> </a></li>
            </ul>
        </nav>
        
